maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:15: error: Unmatched closing brace '}' ignored here
}
^